@@ -70,43 +70,9 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|RandomAccessFile
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|net
 operator|.
 name|Socket
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|channels
-operator|.
-name|FileLock
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|channels
-operator|.
-name|OverlappingFileLockException
 import|;
 end_import
 
@@ -184,9 +150,9 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|util
+name|net
 operator|.
-name|Time
+name|ServerSocketUtil
 import|;
 end_import
 
@@ -196,9 +162,11 @@ name|org
 operator|.
 name|apache
 operator|.
-name|zookeeper
+name|hadoop
 operator|.
-name|PortAssignment
+name|util
+operator|.
+name|Time
 import|;
 end_import
 
@@ -876,16 +844,6 @@ name|boolean
 name|allClientsSetup
 init|=
 literal|false
-decl_stmt|;
-DECL|field|portNumLockFile
-specifier|private
-name|RandomAccessFile
-name|portNumLockFile
-decl_stmt|;
-DECL|field|portNumFile
-specifier|private
-name|File
-name|portNumFile
 decl_stmt|;
 DECL|method|createClient (CountdownWatcher watcher, String hp)
 specifier|protected
@@ -2040,98 +1998,22 @@ argument_list|()
 expr_stmt|;
 name|int
 name|port
-decl_stmt|;
-for|for
-control|(
-init|;
-condition|;
-control|)
-block|{
-name|port
-operator|=
-name|PortAssignment
-operator|.
-name|unique
-argument_list|()
-expr_stmt|;
-name|FileLock
-name|lock
 init|=
-literal|null
+literal|0
 decl_stmt|;
-name|portNumLockFile
-operator|=
-literal|null
-expr_stmt|;
 try|try
 block|{
-try|try
-block|{
-name|portNumFile
-operator|=
-operator|new
-name|File
-argument_list|(
-name|BASETEST
-argument_list|,
 name|port
-operator|+
-literal|".lock"
-argument_list|)
-expr_stmt|;
-name|portNumLockFile
 operator|=
-operator|new
-name|RandomAccessFile
+name|ServerSocketUtil
+operator|.
+name|getPort
 argument_list|(
-name|portNumFile
+name|port
 argument_list|,
-literal|"rw"
+literal|100
 argument_list|)
 expr_stmt|;
-try|try
-block|{
-name|lock
-operator|=
-name|portNumLockFile
-operator|.
-name|getChannel
-argument_list|()
-operator|.
-name|tryLock
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|OverlappingFileLockException
-name|e
-parameter_list|)
-block|{
-continue|continue;
-block|}
-block|}
-finally|finally
-block|{
-if|if
-condition|(
-name|lock
-operator|!=
-literal|null
-condition|)
-break|break;
-if|if
-condition|(
-name|portNumLockFile
-operator|!=
-literal|null
-condition|)
-name|portNumLockFile
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 catch|catch
 parameter_list|(
@@ -2146,7 +2028,6 @@ argument_list|(
 name|e
 argument_list|)
 throw|;
-block|}
 block|}
 return|return
 literal|"127.0.0.1:"
@@ -2319,16 +2200,6 @@ name|tearDownAll
 argument_list|()
 expr_stmt|;
 name|stopServer
-argument_list|()
-expr_stmt|;
-name|portNumLockFile
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-name|portNumFile
-operator|.
-name|delete
 argument_list|()
 expr_stmt|;
 if|if
