@@ -631,26 +631,11 @@ expr_stmt|;
 name|Configuration
 name|sslConf
 init|=
-operator|new
-name|Configuration
-argument_list|(
-literal|false
-argument_list|)
+name|KeyStoreTestUtil
+operator|.
+name|getSslConfig
+argument_list|()
 decl_stmt|;
-name|sslConf
-operator|.
-name|addResource
-argument_list|(
-literal|"ssl-server.xml"
-argument_list|)
-expr_stmt|;
-name|sslConf
-operator|.
-name|addResource
-argument_list|(
-literal|"ssl-client.xml"
-argument_list|)
-expr_stmt|;
 name|server
 operator|=
 operator|new
