@@ -80,24 +80,6 @@ name|security
 operator|.
 name|authentication
 operator|.
-name|client
-operator|.
-name|AuthenticatedURL
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|security
-operator|.
-name|authentication
-operator|.
 name|server
 operator|.
 name|AuthenticationFilter
@@ -196,18 +178,6 @@ name|servlet
 operator|.
 name|http
 operator|.
-name|Cookie
-import|;
-end_import
-
-begin_import
-import|import
-name|javax
-operator|.
-name|servlet
-operator|.
-name|http
-operator|.
 name|HttpServletResponse
 import|;
 end_import
@@ -239,16 +209,6 @@ operator|.
 name|net
 operator|.
 name|HttpURLConnection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|net
-operator|.
-name|MalformedURLException
 import|;
 end_import
 
@@ -592,26 +552,11 @@ expr_stmt|;
 name|Configuration
 name|sslConf
 init|=
-operator|new
-name|Configuration
-argument_list|(
-literal|false
-argument_list|)
+name|KeyStoreTestUtil
+operator|.
+name|getSslConfig
+argument_list|()
 decl_stmt|;
-name|sslConf
-operator|.
-name|addResource
-argument_list|(
-literal|"ssl-server.xml"
-argument_list|)
-expr_stmt|;
-name|sslConf
-operator|.
-name|addResource
-argument_list|(
-literal|"ssl-client.xml"
-argument_list|)
-expr_stmt|;
 name|clientSslFactory
 operator|=
 operator|new
