@@ -230,16 +230,6 @@ name|java
 operator|.
 name|security
 operator|.
-name|PrivateKey
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|security
-operator|.
 name|SecureRandom
 import|;
 end_import
@@ -337,30 +327,6 @@ operator|.
 name|cert
 operator|.
 name|CertificateEncodingException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|security
-operator|.
-name|cert
-operator|.
-name|CertificateException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|security
-operator|.
-name|cert
-operator|.
-name|CertificateFactory
 import|;
 end_import
 
@@ -1220,8 +1186,9 @@ operator|new
 name|File
 argument_list|(
 name|sslConfDir
-operator|+
-literal|"/ssl-client.xml"
+argument_list|,
+name|getClientSSLConfigFileName
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|File
@@ -1231,8 +1198,9 @@ operator|new
 name|File
 argument_list|(
 name|sslConfDir
-operator|+
-literal|"/ssl-server.xml"
+argument_list|,
+name|getServerSSLConfigFileName
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|Map
@@ -1570,7 +1538,79 @@ return|return
 name|serverSSLConf
 return|;
 block|}
-comment|/**    * Creates SSL configuration.    *     * @param mode SSLFactory.Mode mode to configure    * @param keystore String keystore file    * @param password String store password, or null to avoid setting store    *   password    * @param keyPassword String key password, or null to avoid setting key    *   password    * @param trustKS String truststore file    * @return Configuration for SSL    */
+comment|/**    * Returns the client SSL configuration file name.  Under parallel test    * execution, this file name is parameterized by a unique ID to ensure that    * concurrent tests don't collide on an SSL configuration file.    *    * @return client SSL configuration file name    */
+DECL|method|getClientSSLConfigFileName ()
+specifier|public
+specifier|static
+name|String
+name|getClientSSLConfigFileName
+parameter_list|()
+block|{
+return|return
+name|getSSLConfigFileName
+argument_list|(
+literal|"ssl-client"
+argument_list|)
+return|;
+block|}
+comment|/**    * Returns the server SSL configuration file name.  Under parallel test    * execution, this file name is parameterized by a unique ID to ensure that    * concurrent tests don't collide on an SSL configuration file.    *    * @return client SSL configuration file name    */
+DECL|method|getServerSSLConfigFileName ()
+specifier|public
+specifier|static
+name|String
+name|getServerSSLConfigFileName
+parameter_list|()
+block|{
+return|return
+name|getSSLConfigFileName
+argument_list|(
+literal|"ssl-server"
+argument_list|)
+return|;
+block|}
+comment|/**    * Returns an SSL configuration file name.  Under parallel test    * execution, this file name is parameterized by a unique ID to ensure that    * concurrent tests don't collide on an SSL configuration file.    *    * @param base the base of the file name    * @return SSL configuration file name for base    */
+DECL|method|getSSLConfigFileName (String base)
+specifier|private
+specifier|static
+name|String
+name|getSSLConfigFileName
+parameter_list|(
+name|String
+name|base
+parameter_list|)
+block|{
+name|String
+name|testUniqueForkId
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"test.unique.fork.id"
+argument_list|)
+decl_stmt|;
+name|String
+name|fileSuffix
+init|=
+name|testUniqueForkId
+operator|!=
+literal|null
+condition|?
+literal|"-"
+operator|+
+name|testUniqueForkId
+else|:
+literal|""
+decl_stmt|;
+return|return
+name|base
+operator|+
+name|fileSuffix
+operator|+
+literal|".xml"
+return|;
+block|}
+comment|/**    * Creates SSL configuration.    *    * @param mode SSLFactory.Mode mode to configure    * @param keystore String keystore file    * @param password String store password, or null to avoid setting store    *   password    * @param keyPassword String key password, or null to avoid setting key    *   password    * @param trustKS String truststore file    * @return Configuration for SSL    */
 DECL|method|createSSLConfig (SSLFactory.Mode mode, String keystore, String password, String keyPassword, String trustKS)
 specifier|private
 specifier|static
@@ -2022,6 +2062,79 @@ throw|throw
 name|e
 throw|;
 block|}
+block|}
+comment|/**    * Get the SSL configuration    * @return {@link Configuration} instance with ssl configs loaded    */
+DECL|method|getSslConfig ()
+specifier|public
+specifier|static
+name|Configuration
+name|getSslConfig
+parameter_list|()
+block|{
+name|Configuration
+name|sslConf
+init|=
+operator|new
+name|Configuration
+argument_list|(
+literal|false
+argument_list|)
+decl_stmt|;
+name|String
+name|sslServerConfFile
+init|=
+name|KeyStoreTestUtil
+operator|.
+name|getServerSSLConfigFileName
+argument_list|()
+decl_stmt|;
+name|String
+name|sslClientConfFile
+init|=
+name|KeyStoreTestUtil
+operator|.
+name|getClientSSLConfigFileName
+argument_list|()
+decl_stmt|;
+name|sslConf
+operator|.
+name|addResource
+argument_list|(
+name|sslServerConfFile
+argument_list|)
+expr_stmt|;
+name|sslConf
+operator|.
+name|addResource
+argument_list|(
+name|sslClientConfFile
+argument_list|)
+expr_stmt|;
+name|sslConf
+operator|.
+name|set
+argument_list|(
+name|SSLFactory
+operator|.
+name|SSL_SERVER_CONF_KEY
+argument_list|,
+name|sslServerConfFile
+argument_list|)
+expr_stmt|;
+name|sslConf
+operator|.
+name|set
+argument_list|(
+name|SSLFactory
+operator|.
+name|SSL_CLIENT_CONF_KEY
+argument_list|,
+name|sslClientConfFile
+argument_list|)
+expr_stmt|;
+return|return
+name|sslConf
+return|;
 block|}
 block|}
 end_class
